--- a/documents/index.html
+++ b/documents/index.html
@@ -24,15 +24,23 @@
 
 							<!-- Header -->
 								<header id="header">
-
+									<a href="/" class="logo"><strong>Documents</strong></a>
+									<ul class="icons">
+										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+									</ul>
 								</header>
 
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Activites</h1>
+										<h1>Documents</h1>
 									</header>
-									<section id="markdown-container" style="display: none;"></section>
+										<p id="markdown-container" style="display: none;"></p>
+									<section></section>
 								</section>
 						</div>
 					</div>
@@ -95,7 +103,7 @@
 		<script>
 			$(document).ready(() => {
 				window.loadMarkdowns();
-				window.appendMdTo("./activites.md", $("#markdown-container"));
+				window.appendMdTo("./documents.md", $("#markdown-container"));
 			});
 		</script>
 	</body>
